	of make-char.
	(sgml-char-names-table): Iteration limit fixed.

	* term/mac-win.el: Deleted unnecessary calls of set-fontset-font.
	(ccl-encode-mac-roman-font): Delete.

	* Makefile.in (DONTCOMPILE): Add latin1-disp.el, ucs-tables.el,
	utf-8.el, and utf-8-subst.el as they can't be bytecompiled
	currently.  This is just a temporary workaround.

2008-02-01  Juanma Barranquero  <lekktu@gmail.com>

	* whitespace.el (whitespace): Set :version tag to 23.1.
	(whitespace-turn-off, whitespace-toggle-options): Fix typos.
	(whitespace-style, whitespace-chars, whitespace-space)
	(whitespace-hspace, whitespace-tab, whitespace-newline)
	(whitespace-trailing, whitespace-line, whitespace-space-before-tab)
	(whitespace-indentation, whitespace-empty, whitespace-space-after-tab)
	(whitespace-hspace-regexp, whitespace-space-regexp)
	(whitespace-tab-regexp, whitespace-trailing-regexp)
	(whitespace-space-before-tab-regexp, whitespace-indentation-regexp)
	(whitespace-empty-at-bob-regexp, whitespace-empty-at-eob-regexp)
	(whitespace-space-after-tab-regexp, whitespace-line-column)
	(whitespace-display-mappings, global-whitespace-toggle-options)
	(whitespace-cleanup, whitespace-cleanup-region)
	(whitespace-interactive-char): Doc fixes.

2008-02-01  Juanma Barranquero  <lekktu@gmail.com>

	* whitespace.el (global-whitespace-mode): Fix modeline lighter.
	When turning off the global mode, turn off the local modes too
	if whitespace is being unloaded.
	(whitespace-unload-function): New function.

2008-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc.el (vc-update): Fix bug: Specify branch tip as
	vc-checkout REVISION.  Reported by Dan Nicolaescu.

2008-02-01  Glenn Morris  <rgm@gnu.org>

	* info.el (bookmark-make-cell-function, bookmark-search-size)
	(bookmark-current-bookmark): Declare variables for compiler.
	(bookmark-buffer-file-name, bookmark-get-filename)
	(bookmark-get-front-context-string)
	(bookmark-get-rear-context-string, bookmark-get-position)